# Geni

./: .gitignore  CHANGELOG.md  FUTURE_FEATURES.md  LICENSE  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: README.md  bump-version.mjs  sync-version.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entitlements/: macos.entitlements
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/http/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/openapi/: mod.rs
src-tauri/src/postman/: mod.rs
src-tauri/src/sync/: api_server.rs  google_drive.rs  mod.rs  supabase.rs
src/components/: AuthConfig.tsx  Breadcrumb.tsx  CollectionAuthModal.tsx  CollectionInfo.tsx  CollectionItem.tsx  DragDropWrapper.tsx  DropIndicator.tsx  EnvironmentManager.tsx  EnvironmentSelector.tsx  FormDataEditor.tsx  HttpMethodBadge.tsx  HttpMethodSelector.tsx  PathParamsEditor.tsx  QueryParamsEditor.tsx  RequestPanel.tsx  ResponsePanel.tsx  Sidebar.tsx  SyncIndicator.tsx  SyncSettings.tsx  TabBar.tsx  Toast.tsx  UpdateManager.tsx  UrlEncodedEditor.tsx  UrlInput.tsx
src/components/ui/: Button.tsx  Input.tsx  Label.tsx  Select.tsx
src/contexts/: ThemeContext.tsx  ToastContext.tsx
src/store/: index.ts
