[package]
name = "geni"
version = "0.1.8"
description = "A Postman-like API client built with Tauri and Rust"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "geni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
sled = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
syntect = "5.1"
indexmap = { version = "2.0", features = ["serde"] }
base64 = "0.21"
mime_guess = "2.0"
postgrest = "1.5"
oauth2 = "4.4"
url = "2.5"
tokio-postgres = { version = "0.7", features = [
    "with-serde_json-1",
    "with-uuid-1",
    "with-chrono-0_4",
] }
native-tls = "0.2"
postgres-native-tls = "0.5"
